WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131690
MacroAssemblerX86::moveDoubleToInts() shouldn't clobber the source
https://bugs.webkit.org/show_bug.cgi?id=131690
Summary
MacroAssemblerX86::moveDoubleToInts() shouldn't clobber the source
Filip Pizlo
Reported
2014-04-15 12:34:20 PDT
...
Attachments
Do not clobber src register in MacroAssemblerX86::moveDoubleToInts()
(3.67 KB, patch)
2014-09-12 14:00 PDT
,
Julien Brianceau
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2014-09-12 14:00:06 PDT
Created
attachment 238053
[details]
Do not clobber src register in MacroAssemblerX86::moveDoubleToInts()
Oliver Hunt
Comment 2
2014-09-12 14:56:36 PDT
Comment on
attachment 238053
[details]
Do not clobber src register in MacroAssemblerX86::moveDoubleToInts() r=me assuming perf is good
Julien Brianceau
Comment 3
2014-09-12 15:03:44 PDT
Manually committed
r173580
:
http://trac.webkit.org/changeset/173580
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug