[x86] moveDoubleToInts() does not clobber its source register anymore https://bugs.webkit.org/show_bug.cgi?id=131690

Reviewed by Oliver Hunt.

* assembler/MacroAssemblerX86.h:
(JSC::MacroAssemblerX86::moveDoubleToInts):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileValueRep):
* jit/SpecializedThunkJIT.h:
(JSC::SpecializedThunkJIT::returnDouble):



Canonical link: https://commits.webkit.org/154615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173580 268f45cc-cd09-0410-ab3c-d52691b4dbfc